AUTOMAKE_OPTIONS = foreign

SUBDIRS = plugins

osogodir=${pkglibdir}
osogo_PYTHON=\
osogo.ini\
BoardWindow.py\
BoardWindow.glade\
ConfirmWindow.py\
EntityListWindow.glade\
EntityListWindow.py\
InterfaceWindow.py\
InterfaceWindow.glade\
LoggerWindow.glade\
LoggerWindow.py\
MainWindow.glade\
MainWindow.py\
MessageWindow.glade\
MessageWindow.py\
OsogoWindow.py\
OsogoPluginManager.py\
OsogoPluginWindow.py\
StepperWindow.glade\
StepperWindow.py\
OsogoUtil.py\
PluginInstanceSelection.glade\
PluginInstanceSelection.py\
PluginWindowPopupMenu.glade\
Plot.py\
board.glade\
config.py\
ecell.xpm\
main.py\
opengui.py\
A-sample-rule.py\
B-sample-rule.py\
samplerule.py\
sample-script.py\
icon_board.xpm\
icon_down.xpm\
icon_ecelllogo.xpm\
icon_entity.xpm\
icon_interface.xpm\
icon_logger.xpm\
icon_message.xpm\
icon_palette.xpm\
icon_stepper.xpm\
icon_start.xpm\
icon_step.xpm\
icon_stop.xpm\
icon_up.xpm


bin_SCRIPTS =\
gecell

EXTRA_DIST=${osogo_PYTHON}\
${bin_SCRIPTS}

