AUTOMAKE_OPTIONS = foreign

SUBDIRS = plugins

osogodir=${pkglibdir}
osogo_PYTHON=\
osogo.ini\
BoardWindow.py\
BoardWindow.glade\
ConfirmWindow.py\
EntityListWindow.glade\
EntityListWindow.py\
InterfaceWindow.py\
InterfaceWindow.glade\
LoggerWindow.glade\
LoggerWindow.py\
MainWindow.glade\
MainWindow.py\
MessageWindow.glade\
MessageWindow.py\
OsogoWindow.py\
OsogoPluginManager.py\
OsogoPluginWindow.py\
StepperWindow.glade\
StepperWindow.py\
AboutSessionMonitor.glade\
AboutSessionMonitor.py\
OsogoUtil.py\
PluginInstanceSelection.glade\
PluginInstanceSelection.py\
PluginWindowPopupMenu.glade\
Plot.py\
board.glade\
config.py\
main.py\
opengui.py\
A-sample-rule.py\
B-sample-rule.py\
samplerule.py\
sample-script.py\
ecell.png\
ecell_logo_large.png\
icon_board.png\
icon_ecelllogo.png\
icon_entity.png\
icon_interface.png\
icon_logger.png\
icon_message.png\
icon_start.png\
icon_step.png\
icon_stepper.png\
icon_stop.png


bin_SCRIPTS =\
gecell

EXTRA_DIST=${osogo_PYTHON}\
${bin_SCRIPTS}

