AC_INIT(MainWindow.py)
AM_INIT_AUTOMAKE(osogo,0.0)
AM_CONFIG_HEADER([config.h])
AM_SANITY_CHECK
AC_CANONICAL_HOST
dnl
AM_PATH_PYTHON(2.2)
dnl
AM_CHECK_PYMOD(pygtk,,,[AC_MSG_ERROR(could not find pygtk module)])
AM_CHECK_PYMOD(gtk,,,[AC_MSG_ERROR(could not find gtk module)])
AM_CHECK_PYMOD(gtk.gdk,,,[AC_MSG_ERROR(could not find gtk.gdk module. perhaps pygtk2 is not installed)])
AM_CHECK_PYMOD(gtk.glade,,,[AC_MSG_ERROR(could not find gtk.glade module. perhaps pygtk2-libglade is not installed)])
AM_CHECK_PYMOD(gnome.ui,,[AC_SUBST([GNOME_INSTALLED],yes)],[AC_SUBST([GNOME_INSTALLED],no)])
AM_CHECK_PYMOD(Numeric,,,[AC_MSG_ERROR(could not find Numeric module)])
dnl
AC_OUTPUT(
Makefile
plugins/Makefile
config.py
gecell,
chmod +x gecell
)
