## Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS = foreign

SUBDIRS = misc

toollauncherdir=${pkglibdir}
toollauncher_PYTHON=\
ToolLauncher.glade\
ToolLauncherErrorMessage.glade\
ToolLauncherOkCancel.glade\
ToolLauncherPreferences.glade\
AboutToolLauncher.glade\
config.py\
ParentWindow.py\
ToolLauncher.py\
ToolLauncherErrorMessage.py\
ToolLauncherOkCancel.py\
ToolLauncherPreferences.py\
AboutToolLauncher.py\
Window.py\
toollauncher.png\
toollauncher_large.png\
toollauncher.ico

EXTRA_DIST=${toollauncher_PYTHON}

bin_SCRIPTS =\
toollauncher
