AC_INIT(Window.py)
AM_SANITY_CHECK
AC_CANONICAL_HOST
dnl
AM_INIT_AUTOMAKE(toollauncher,1.0)
dnl
AM_PATH_PYTHON(2.2)
dnl
AM_CHECK_PYMOD(pygtk,,,[AC_MSG_ERROR(could not find pygtk module)])
AM_CHECK_PYMOD(gtk,,,[AC_MSG_ERROR(could not find gtk module)])
AM_CHECK_PYMOD(gtk.gdk,,,[AC_MSG_ERROR(could not find gtk.gdk module. perhaps pygtk2 is not installed)])
AM_CHECK_PYMOD(gtk.glade,,,[AC_MSG_ERROR(could not find gtk.glade module. perhaps pygtk2-libglade is not installed)])
dnl
AC_PROG_CC
AC_OUTPUT(
Makefile
misc/Makefile,
chmod +x toollauncher
)
