samplesdir = $(docdir)/samples

EXTRA_DIST = \
	CoupledOscillator \
	Drosophila-cpp \
	Drosophila \
	Heinrich \
	LTD \
	Pendulum \
	SSystem \
	Toy_Hybrid \
	branchG \
	ga \
	heatshock \
	sessionmanager \
	simple \
	tauleap

samples_DATA = \
	CoupledOscillator/* \
	Drosophila-cpp/* \
	Drosophila/* \
	Heinrich/* \
	LTD/* \
	Pendulum/* \
	SSystem/* \
	Toy_Hybrid/* \
	branchG/* \
	ga/* \
	heatshock/* \
	sessionmanager/* \
	simple/* \
	tauleap/*

